[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/title_screen_background.png" type="Texture" id=1]
[ext_resource path="res://src/UI/UIButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://src/UI/Title_Screen.gd" type="Script" id=4]
[ext_resource path="res://assets/eye.png" type="Texture" id=5]
[ext_resource path="res://assets/title_music.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Tiny5-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "fade_buttons"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnterButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 517, 485 ), Vector2( -100, 485 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuitButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 516, 551 ), Vector2( 1124, 551 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "move_player"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 516, 654 ), Vector2( 516, 400 ), Vector2( 516, 200 ), Vector2( 516, 350 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_buttons"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnterButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 517, 485 ), Vector2( -100, 485 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuitButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 516, 551 ), Vector2( 1124, 551 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "move_player"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 3.4822 ),
"update": 0,
"values": [ Vector2( 516, 654 ), Vector2( 516, 400 ), Vector2( 516, 200 ), Vector2( 516, 350 ) ]
}

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=13]
resource_name = "eye"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "fade_back"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Title_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
modulate = Color( 0.12549, 0, 0.294118, 1 )
margin_left = 196.5
margin_top = 99.0
margin_right = 316.5
margin_bottom = 117.0
custom_fonts/font = SubResource( 15 )
text = "PIT OF CALAMITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 517, 485 )
text = "ENTER"

[node name="QuitButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 516, 551 )
text = "QUIT"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 516, 654 )
frames = SubResource( 3 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_buttons = SubResource( 4 )
anims/move_player = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/fade_buttons = SubResource( 6 )
anims/move_player = SubResource( 7 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 516, 374 )
frames = SubResource( 12 )
frame = 3

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/eye = SubResource( 13 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 1.0
margin_right = 1026.0
margin_bottom = 604.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer4" type="AnimationPlayer" parent="."]
anims/fade_back = SubResource( 14 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer4" to="." method="_on_AnimationPlayer4_animation_finished"]
